--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-reanimated": "1.10.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.21.1",
     "react-native-sensitive-info": "^6.0.0-alpha.9",
     "react-native-windows": "0.70.20",
     "uuid": "^9.0.0"
