add: add lottie animations

--- a/windows/storagenuget/storagenuget.vcxproj.filters
+++ b/windows/storagenuget/storagenuget.vcxproj.filters
@@ -185,6 +185,7 @@
   <ItemGroup>
     <None Include="PropertySheet.props" />
     <None Include="storagenuget_TemporaryKey.pfx" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="readme.txt" />
