--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
+    "lottie-react-native": "^5.1.6",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-gesture-handler": "^2.12.0",
